--- a/src/main/resources/assets/augmented_reborn/lang/uk_ua.json
+++ b/src/main/resources/assets/augmented_reborn/lang/uk_ua.json
@@ -8,13 +8,15 @@
   "item.augmented_reborn.vajra.mode.insane": "Шалений",
   "item.augmented_reborn.vajra.mode.fortune": "Удача",
   "item.augmented_reborn.vajra.mode.silk_touch": "Шовковий Дотик",
-  "item.augmented_reborn.vajra.tooltip.damage": "Шкода: %s",
   "category.augmented_reborn.keys": "Клавіші Augmented Reborn",
   "item.augmented_reborn.vajra.tooltip.mode": "Ваджра",
 
   "key.augmented_reborn.toggle_night_vision": "Переключити нічний зір",
-  "item.augmented_reborn.night_vision.status": "Нічний зір:",
-  "item.augmented_reborn.night_vision.status_message": "Нічний зір:",
-  "item.augmented_reborn.night_vision.enabled": "Включений",
-  "item.augmented_reborn.night_vision.disabled": "Виключений"
+  "item.augmented_reborn.night_vision.status": "Нічний зір: ",
+  "item.augmented_reborn.night_vision.status_message": "Нічний зір: ",
+  "item.augmented_reborn.enabled": "Включений",
+  "item.augmented_reborn.disabled": "Виключений",
+
+  "key.augmented_reborn.toggle_flight": "Переключити квантовий нагрудник",
+  "item.augmented_reborn.flight.status": "Нагрудник: "
 }
